--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
 
             <div class="inputContainer">
-                <input type="text" id="pokemonName">
+                <input type="text" id="pokemonName" placeholder="Enter Pokemon Name">
                 <button class="btn" onclick="fetchdata()">Fetch Data</button>
             </div>
         </div>
